# tcxOnnx

./: .gitignore  CMakeLists.txt  LICENSES.md  README.md  addon.json
.github/workflows/: ci.yml
example-basic/: addons.make
example-basic/src/: main.cpp  tcApp.cpp  tcApp.h
scripts/: fetch_onnxruntime.sh
src/: tcxOnnx.cpp  tcxOnnx.h
